--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,16 @@ description = ""
 authors = ["Thomas Camminady <0milieux_member@icloud.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.8,<3.11"
+gpx-converter = "^2.1.0"
+numpy = "^1.24.2"
+pandas = "^1.5.3"
+matplotlib = "^3.7.1"
+altair = "^4.2.2"
+scipy = "^1.10.1"
+rich = "^13.3.3"
+geopy = "^2.3.0"
+fire = "^0.5.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.0.1"
