--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ scipy = "^1.10.1"
 rich = "^13.3.3"
 geopy = "^2.3.0"
 fire = "^0.5.0"
+folium = "^0.14.0"
+vincent = "^0.4.4"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.0.1"
