--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ rich = "^13.3.3"
 fire = "^0.5.0"
 jupyterlab = "^3.6.3"
 polars = "^0.16.16"
+pyarrow = "^11.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -31,8 +32,6 @@ rich = "^13.3.2"
 geopy = "^2.3.0"
 folium = "^0.14.0"
 vincent = "^0.4.4"
-vega-datasets = "^0.9.0"
-vegafusion = {extras = ["embed"], version = "^1.1.2"}
 
 
 [build-system]
