--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ fire = "^0.5.0"
 jupyterlab = "^3.6.3"
 polars = "^0.16.16"
 pyarrow = "^11.0.0"
+geopandas = "^0.12.2"
 
 
 [tool.poetry.group.dev.dependencies]
