--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ polars = "^0.16.16"
 pyarrow = "^11.0.0"
 geopy = "^2.3.0"
 ipympl = "^0.9.3"
+nbformat = "^5.8.0"
+nbclient = "^0.7.3"
+scipy = "^1.10.1"
 
 
 [tool.poetry.group.dev.dependencies]
