--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,18 +20,21 @@ ipympl = "^0.9.3"
 nbformat = "^5.8.0"
 nbclient = "^0.7.3"
 scipy = "^1.10.1"
-
-
-[tool.poetry.group.dev.dependencies]
 mypy = "^1.0.1"
 ruff = "^0.0.253"
 black = "^23.1.0"
 pyclean = "^2.2.0"
 pre-commit = "^3.1.1"
 ipykernel = "^6.16.1"
+jupyterlab = "^3.6.3"
+
+
+
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
-rich = "^13.3.2"
+folium = "^0.14.0"
+geopandas = "^0.12.2"
 
 
 
