--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ pyclean = "^2.2.0"
 pre-commit = "^3.1.1"
 ipykernel = "^6.16.1"
 jupyterlab = "^3.6.3"
+regex = "^2023.5.5"
+numba = "^0.57.0"
 
 
 
